<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/firstTimeIntro"/>

        <TextView
            android:id="@+id/visitTabletDirectoryTextView"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/visitTabletDirectoryIsNotHere"/>

        <!--<Button-->
            <!--android:id="@+id/visitTabletDirectoryButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="5dp"-->
            <!--android:background="@color/main_theme_dark"-->
            <!--android:textSize="24sp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:text="@string/visitTabletFix"/>-->

        <!--<TextView-->
            <!--android:id="@+id/visitTabletPhotosphereTextView"-->
            <!--android:padding="15dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="36sp"-->
            <!--android:text="@string/visitTabletPhotosphereIsNotHere"/>-->

        <!--<Button-->
            <!--android:id="@+id/visitTabletPhotosphereButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="5dp"-->
            <!--android:background="@color/main_theme_dark"-->
            <!--android:textSize="24sp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:text="@string/visitTabletFix"/>-->

        <TextView
            android:id="@+id/visitTabletGPSTextView"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/visitTabletNoAccessToGPS"/>

        <Button
            android:id="@+id/visitTabletGPSButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/main_theme_dark"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/visitTabletFix"/>

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/visitTabletOkay"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/main_theme_dark"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/visitTabletOkay"/>

    </LinearLayout>

</ScrollView>