<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:background="@color/white"
    android:layout_width="450dp"
    android:layout_height="253dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="25dp"
    android:orientation="horizontal"
    android:onClick="onClickCardview">

        <TextView
            android:id="@+id/MarkerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bla"
            android:paddingBottom="10dp"
            android:layout_gravity="center|top"
            android:textStyle="bold"/>


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:transitionName="@string/ImageTransition"
            android:layout_gravity="center"
            android:src="@drawable/chargement"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bla"
            android:textColor="@android:color/holo_blue_dark"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_vertical|end"/>

        <TextView
            android:id="@+id/statusVisite"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/bla"/>


</android.support.v7.widget.CardView>

